@@ -7,3 +7,7 @@
   border: 1px dotted #ccc;
   padding: 1em;
 }
+
+.daviz-view-edit .field input[type="text"][name$=".title"] {
+  height: auto;
+}
